# check-student-error

./: .gitignore  Makefile  README.md  m4_p02_l_03_Request_Response_readme.txt  pyproject.toml  settings.py  solution.py
simple_blog/: settings.py  urls.py
simple_blog/articles/: urls.py  views.py
simple_blog/categories/: urls.py  views.py
simple_blog/templates/: about.html  articles.html  categories.html  index.html
tests/: conftest.py  test_solution.py
