[tool.poetry]
name = "check-student-error"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "4.2"
django-bootstrap4 = "24.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
